# vibrant

./: .buildinfo  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.MD  CONTRIBUTING.md  Cite.html  Contribute.html  Installation.html  README.md  Usage.html  genindex.html  index.html  initial_cache.example.cmake  objects.inv  search.html  searchindex.js
.github/workflows/: JOSS-pdf.yml  action.yml  deploy-website.yml
JOSS/: paper.bib  paper.md
_sources/: Installation.md.txt  Usage.md.txt  index.rst.txt
cmake/: FindSphinx.cmake  fftw_dependency.cmake  greenx_dependency.cmake  lapack_dependency.cmake  python3.cmake  regression_tests.cmake  website.cmake
docs/: Cite.md  Contribute.md  conf.py  index.rst
reg_test/IR_Berry/: input.txt
reg_test/IR_Berry/output/: IR_spectrum.txt
reg_test/IR_Wannier_Ph/: input.txt
reg_test/Power/pos_mw/: input.txt
reg_test/Power/pos_nomw/: input.txt
reg_test/Power/pos_nomw/output/: power_spec_nomw.txt
reg_test/Power/vel_nomw/: input.txt
reg_test/Power/vel_nomw/output/: power_spec.txt
reg_test/Raman_Berry/: berry_dipole_X_5000_sc.xyz  berry_dipole_Y_5000_sc.xyz  berry_dipole_Z_5000_sc.xyz  berry_dipole_free_5000_sc.xyz
reg_test/Raman_DFPT/: alpha_z_solv_5000_new.xyz  input.txt
src/: cells.f90  cmake_info.f90.in  config_info.f90  constants.f90  dipole_calc.f90  dorotheas_input.inp  fin_diff.f90  kinds.f90  main.f90  makefile  pade_interpolation.f90  read_input.f90  read_traj.f90  setup.f90  spectra.f90  timing.f90  types.f90  vel_cor.f90  vib_types.f90
test/Absorption/: input.txt  r-met_RTP_dipoles_static_X_1000.xyz  test_Absorption.py
test/Absorption/Pade/: input.txt  r-met.xyz  r-met_RTP_dipoles_static_X_100.xyz  r-met_RTP_dipoles_static_Y_1000.xyz  r-met_RTP_dipoles_static_Z_100.xyz  test_Absorption_Pade.py
test/Absorption/Pade/output/: absorption_spectra_pade.txt
test/Absorption/normal/: input.txt  r-met_RTP_dipoles_static_Y_1000.xyz  r-met_RTP_dipoles_static_Z_1000.xyz  test_Absorption.py
test/Absorption/normal/output/: absorption_spectra.txt
test/Absorption/output/: absorption_spectra.txt
test/IR_Berry/: input.txt  test_IR_Berry.py
test/IR_Berry/output/: IR_spectrum.txt
test/IR_Static_Ext/: input.txt  normal_mode_displ.txt  o-NP.xyz  test_IR_Static_Ext.py
test/IR_Static_Ext/output/: result_static_ir.txt
test/IR_Static_NMA/: dipole_o-NP_free_static.xyz  input.txt  o-NP-force.data3  test_IR_Static_NMA.py
test/IR_Static_NMA/output/: normal_mode_freq.txt
test/IR_Wannier_Ph/: test_IR_Wannier_Ph.py
test/IR_Wannier_Ph/output/: IR_spectrum.txt
test/IR_Wannier_whole/: input.txt  test_IR_Wannier_whole.py
test/IR_Wannier_whole/output/: IR_spectrum.txt
test/Normal_Modes/: input.txt  test_Normal_Modes.py  water.xyz
test/Normal_Modes/output/: normal_mode_freq.txt
test/Power/pos_mw/: input.txt  test_Power_pos_mv.py  test_Power_pos_mw.py
test/Power/pos_mw/output/: power_spec_mw.txt
test/Power/pos_nomw/: input.txt  test_Power_pos_nomw.py
test/Power/vel_mw/: input.txt  test_Power_vel_mw.py
test/Power/vel_mw/output/: power_spec.txt
test/Power/vel_nomw/: input.txt  test_Power_vel_nomw.py
test/Power/vel_nomw/output/: power_spec.txt
test/Raman_Berry/: input.txt  test_Raman_Berry.py
test/Raman_Berry/output/: COF-1_Raman_sc_Berry.txt
test/Raman_DFPT/: alpha_x_solv_5000_new.xyz  alpha_y_solv_5000_new.xyz  alpha_z_solv_5000_new.xyz  input.txt  test_Raman_DFPT.py
test/Raman_DFPT/output/: COF-1_Raman_solv_DFPT.txt
test/Raman_Static_DFPT/: input.txt  test_Raman_Static_DFPT.py
test/Raman_Static_DFPT_Ext/: input.txt  normal_mode_water_displ.txt  test_Raman_Static_DFPT_Ext.py
test/Raman_Static_DFPT_Ext/output/: result_static_raman.txt
test/Raman_Static_DFPT_NMA/: input.txt  test_Raman_Static_DFPT_NMA.py  water-force.data3
test/Raman_Static_DFPT_NMA/output/: normal_mode_displ.txt  normal_mode_freq.txt  result_static_raman.txt
test/Raman_Wannier_whole/: input.txt  test_Raman_Wannier_whole.py
test/Raman_Wannier_whole/output/: raman_unpolarized.txt
test/Resonance_Raman_Static_Ext/Pade/: input.txt  test_RR_Static_Pade_Ext.py
test/Resonance_Raman_Static_Ext/Pade/output/: absorption_spectrum.txt  result_static_resraman.txt
test/Resonance_Raman_Static_Ext/normal/: input.txt  test_RR_Static_normal_Ext.py
test/Resonance_Raman_Static_Ext/normal/output/: absorption_spectrum.txt  result_static_resraman.txt
test/Resonance_Raman_Static_NMA/Pade/: input.txt  r-met-force.data3  test_RR_Static_Pade_NMA.py
test/Resonance_Raman_Static_NMA/Pade/output/: absorption_spectrum.txt  normal_mode_displ.txt  normal_mode_freq.txt  result_static_resraman.txt
test/Resonance_Raman_Static_NMA/normal/: input.txt  test_RR_Static_normal_NMA.py
test/Resonance_Raman_Static_NMA/normal/output/: absorption_spectrum.txt  result_static_resraman.txt
